Set up gradle for full production use, set-up tables in flyway, configured postgres in docker for local, wired flyway with docker postgres